# runtime-autopilot

./: .gitignore  .golangci.yml  Makefile  README.md  go.mod
.github/workflows/: ci.yml
adapters/django/: Dockerfile.test  pyproject.toml
adapters/django/runtime_autopilot/: __init__.py  apps.py  probe.py  profile.py
adapters/django/tests/: settings.py  test_probe.py
adapters/fastapi/: Dockerfile.test  pyproject.toml
adapters/fastapi/runtime_autopilot_fastapi/: __init__.py  probe.py
adapters/fastapi/tests/: test_probe.py
adapters/laravel/: Dockerfile.test  composer.json  phpunit.xml
adapters/laravel/src/: AutopilotServiceProvider.php  Probe.php  RuntimeProfile.php
adapters/laravel/tests/: ProbeTest.php
cmd/runtime-autopilot/: main.go
internal/cgroup/: cgroup_test.go  cpu.go  memory.go
internal/detect/: detect_test.go  filesystem.go  platform.go  role.go
internal/profile/: profile.go  profile_test.go
pkg/probe/: probe.go  probe_test.go
